fixed socket's bug

--- a/U10QHost/Base.lproj/Main.storyboard
+++ b/U10QHost/Base.lproj/Main.storyboard
@@ -187,7 +187,7 @@
                                         <color key="textColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sa9-KN-EzH">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1m8MhhETtquk2j3c+z/07rKNbzm4K5+rQ6a3Zr11f0I=" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sa9-KN-EzH">
                                         <rect key="frame" x="8" y="158" width="384" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="bh9-ln-oK2"/>
